--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,8 @@
 <project>
+    <!--
+        This is a dummy maven pom. It doesn't work for compiling. Instead Bob is used
+        for that. This file exists to make it easier to configure the project in IntelliJ.
+    -->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.codemonstur</groupId>
@@ -16,13 +20,13 @@
         <dependency>
             <groupId>com.github.codemonstur</groupId>
             <artifactId>bobthebuildtool</artifactId>
-            <version>0.5.0</version>
+            <version>5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.codemonstur</groupId>
             <artifactId>htmlcompiler</artifactId>
-            <version>4.8.0</version>
+            <version>5.0.0</version>
         </dependency>
     </dependencies>
 </project>
